# cpp-assignment1-3y

./: .gitignore  CMakeLists.txt  README.md  data.txt  output.txt
.github/workflows/: students_check.yaml
cpp-assignment1-3y/: CMakeLists.txt
cpp-assignment1-3y/cpp-assignment1-3y/: CMakeLists.txt  cpp-assignment1-3y.cpp  cpp-assignment1-3y.h
src/: fill.cpp  main.cpp  singleton.hpp  system_config.cpp  system_config.hpp  tempCodeRunnerFile.hpp  user_config.cpp  user_config.hpp
